	PR tree-optimize/44485 	* tree-cfgcleanup.c (fixup_noreturn_call): Remove basic blocks containing 	use of return value of noreturn function. 	* gcc.c-torture/compile/pc44485.c: New testcase.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160659 138bc75d-0d04-0410-961f-82ee72b054a4